dark mode caching issue fix

--- a/docs/style.css
+++ b/docs/style.css
@@ -9,6 +9,8 @@
 body {
     margin: 0;
     font: 6vh "Fira Sans Condensed", "Fira Sans", "Helvetica Neue", Arial, sans-serif;
+    background: #fff;
+    color: #111;
 }
 
 article {
